<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright 2019 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="app_name">Todo</string>
    <string name="add_fruit">New fruit</string>
    <string name="edit_fruit">Edit fruit</string>
    <string name="fruit_details">fruit Details</string>
    <string name="fruit_marked_complete">fruit marked complete</string>
    <string name="fruit_marked_active">fruit marked active</string>
    <string name="loading_fruits_error">Error while loading fruits</string>
    <string name="loading_fruit_error">Error while loading fruit</string>
    <string name="fruit_not_found">fruit not found</string>
    <string name="completed_fruits_cleared">Completed fruits cleared</string>
    <string name="menu_filter">Filter</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="menu_back">Back</string>
    <string name="menu_clear">Clear completed</string>
    <string name="menu_delete_fruit">Delete fruit</string>
    <string name="menu_more">More</string>
    <string name="navigation_view_header_title">Todo</string>
    <string name="title_hint">Title</string>
    <string name="title_hint1">Categoria</string>
    <string name="description_hint">Enter your fruit here.</string>

    <string name="cd_save_fruit">Save fruit</string>
    <string name="empty_fruit_message">fruits cannot be empty</string>
    <string name="successfully_saved_fruit_message">fruit saved</string>
    <string name="list_title">fruit List</string>
    <string name="list_granos">fruit Grains</string>
    <string name="list_verduras">fruit Vegetables</string>
    <string name="list_legunbres">fruit Legumes</string>
    <string name="list_groceries">fruit Groceries</string>
    <string name="statistics_title">Statistics</string>
    <string name="statistics_no_fruits">You have no fruits.</string>
    <string name="statistics_active_fruits">Active fruits: %.1f%%</string>
    <string name="statistics_completed_fruits">Completed fruits: %.1f%%</string>
    <string name="statistics_error">Error loading statistics.</string>
    <string name="no_data">No data</string>
    <string name="loading">LOADING</string>

    <string-array name="list_fruits_array">
        <item>@string/nav_all</item>
        <item>@string/nav_active</item>
        <item>@string/nav_completed</item>
    </string-array>
    <string name="nav_all">All</string>
    <string name="nav_active">Active</string>
    <string name="nav_completed">Completed</string>
    <string name="label_all">All fruits</string>
    <string name="label_active">Active fruits</string>
    <string name="label_completed">Completed fruits</string>
    <string name="no_fruits_all">You have no fruits!</string>
    <string name="no_fruits_active">You have no active fruits!</string>
    <string name="no_fruits_completed">You have no completed fruits!</string>
    <string name="refresh">Refresh</string>
    <string name="successfully_deleted_fruit_message">fruit was deleted</string>
    <string name="successfully_added_fruit_message">fruit added</string>
    <string name="no_data_description" />

    <!-- Content Descriptions -->
    <string name="fruits_header_image_content_description">fruits header image</string>
    <string name="no_fruits_image_content_description">No fruits image</string>

</resources>
